@@ -2,12 +2,15 @@ package me.min.xulgon.service;
 
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import net.coobird.thumbnailator.Thumbnails;
 import org.mapstruct.ap.shaded.freemarker.template.utility.StringUtil;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
 import org.springframework.web.multipart.MultipartFile;
 
+import javax.imageio.ImageIO;
+import java.awt.image.BufferedImage;
 import java.io.File;
 import java.io.IOException;
 import java.io.OutputStream;
@@ -23,13 +26,15 @@ public class StorageService {
    @Value("${resource.path}")
    private String DIR_PATH;
 
-   public String store(MultipartFile photo) {
+   public String store(BufferedImage bufferedImage) {
       String name = UUID.randomUUID().toString();
-      String extension = StringUtils.getFilenameExtension(photo.getOriginalFilename());
+      String extension = "jpg";
       String fileName = name + "." + extension;
-      Path path = Paths.get(DIR_PATH, fileName);
-      try (OutputStream os = Files.newOutputStream(path)) {
-         os.write(photo.getBytes());
+      try {
+         Thumbnails.of(bufferedImage)
+               .scale(1)
+               .outputFormat("jpg")
+               .toFile(new File(Path.of(DIR_PATH, fileName).toString()));
       } catch (IOException e) {
          e.printStackTrace();
       }
